--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@ body {
   background: rgba(0, 0, 0, 0.05);
 }
 
+.root {
+  background: rgba(0, 0, 0, 0.05);
+  min-height: 100vh;
+}
+
 header {
   width: 100%;
   position: fixed;
@@ -25,6 +30,12 @@ header {
 
 .content {
   max-width: 1100px;
+  margin: auto;
+}
+
+.content-blog {
+  max-width: 1100px;
+  padding-top: 3rem;
   margin: auto;
 }
 
